## ############################################################
##
## File:  Makefile.am
##
## Purpose: Needed for when cmake in in an autotools project
##
## $Id: Makefile.am 1236 2012-01-28 00:17:20Z kruger $
##
## ############################################################

SUBDIRS =

EXTRA_DIST = \
  FindSciAdios.cmake FindSciBabel.cmake FindSciBase.cmake \
  FindSciBlasLapack.cmake FindSciBoost.cmake FindSciCfitsio.cmake \
  FindSciChombo.cmake FindSciCLapackCMake.cmake \
  FindSciComposerToolkit.cmake FindSciDoxygen.cmake \
  FindSciFacets.cmake FindSciFacetsIfc.cmake \
  FindSciFcIoWrappers.cmake FindSciFftw3.cmake \
  FindSciFftw.cmake FindSciFluxgrid.cmake FindSciFmcfm.cmake \
  FindSciGaCode.cmake FindSciGeom.cmake \
  FindSciGpulib.cmake FindSciGsl.cmake FindSciGtest.cmake \
  FindSciHdf5.cmake FindSciIdl.cmake FindSciIps.cmake \
  FindSciLicMgr.cmake FindSciMesa.cmake FindSciMex.cmake \
  FindSciMpi.cmake FindSciMuparser.cmake FindSciMxml.cmake \
  FindSciNautilus.cmake FindSciNetcdf.cmake FindSciNetlibLite.cmake \
  FindSciNsis.cmake FindSciNtccTransport.cmake FindSciNubeam.cmake \
  FindSciOpenSplice.cmake FindSciOpenSsl.cmake FindSciPatoh.cmake \
  FindSciPetsc.cmake FindSciPhysics.cmake FindSciPlasmaState.cmake \
  FindSciPolyswift.cmake FindSciPSpline.cmake FindSciPythonLibs.cmake \
  FindSciQScintilla.cmake FindSciQt4.cmake FindSciSimD.cmake \
  FindSciSphinx.cmake FindSciSz.cmake FindSciThrust.cmake \
  FindSciTranspbase.cmake FindSciTrilinos.cmake FindSciUedge.cmake \
  FindSciVisIt.cmake FindSciVorpal.cmake FindSciVtk.cmake \
  FindSciZ.cmake SciFindPackage.cmake sciOSPLMacros.cmake

