## ############################################################
##
## File:    Makefile.am
##
## Purpose: Purpose: Needed for cmake in an autotools project
##
## $Id: Makefile.am 1159 2011-12-17 14:19:19Z cary $
##
## ############################################################

SUBDIRS =

EXTRA_DIST = \
  checkCompilerRTTI.cxx gendeclstatics.cxx modulesrcfile.f90 \
  mpi_mod.f90 mpi_h.cxx stdabsdbl.cxx

